maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: reassignment to val
  cpt=0
     ^PledgeMaze:18: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:22: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:26: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:30: error: reassignment to val
  cpt=cpt-1
     ^PledgeMaze:33: error: not found: type dir
def isDirectionFree(direction:dir){
                              ^PledgeMaze:35: error: not found: value dir
  while(getDirection!=dir){
                      ^PledgeMaze:44: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^PledgeMaze:44: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return false
    ^PledgeMaze:51: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^PledgeMaze:51: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^